fix input spacing

--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,7 @@
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	height: 40vh;
+	height: 22rem;
 	justify-content: space-between;
 }
 
